xdg-utils-cxx (1.0.1-3) UNRELEASED; urgency=medium

  * Add patches provided by Assassin to fix issues with targets and
    upstream uses of this library.
    - Fix the SO version.
    - Fix the install path to be in a searched lib path.
  * Convert package to libraries and dev packages for symbols
    handling.
     - Break package into libraries and dev packages with
     virtual package for old package.
     - Use pkg-kde-tools for easier symbols handling.
     - Add new symbols files for libraries.
  * Remove unused dependency pkg-config.
  * Fix lintian errors.
    - Rename packages to match SO version.
    - Fix spelling error.
    - Fix hardening export in rules.

 -- Scarlett Moore <sgmoore@kde.org>  Mon, 08 Feb 2021 12:52:39 -0700

xdg-utils-cxx (1.0.1-2) unstable; urgency=medium

  * Update copyright with missing entry.
    Refresh formatting.
  * Update standards version to 4.5.1; no changes needed.
  * Add upstream patch to fix typo. (lintain)
  * Release to unstable.

 -- Scarlett Moore <sgmoore@kde.org>  Tue, 19 Jan 2021 10:08:38 -0700

xdg-utils-cxx (1.0.1-1) unstable; urgency=medium

  [ Scarlett Moore ]
  * Initial release (Closes: #934253)

 -- Scarlett Moore <sgmoore@kde.org>  Wed, 13 Jan 2021 14:35:26 -0700