@@ -4,6 +4,7 @@ xdg-utils-cxx (1.0.1-3) UNRELEASED; urgency=medium
     upstream uses of this library.
     - Fix the SO version.
     - Fix the install path to be in a searched lib path.
+    - Clean up patches and make them DEP 3 compliant.
   * Convert package to libraries and dev packages for symbols
     handling.
      - Break package into libraries and dev packages with
